Update app name and description to "Ultimate Twitter Tool" in manifest and settings files, enhancing branding and clarity.

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Twitter Stats Analyzer",
+    "name": "Ultimate Twitter Tool",
     "version": "1.0",
-    "description": "Analyze Twitter profiles, track verified followers, bulk follow users, and auto interact with tweets.",
+    "description": "Advanced Twitter/X profile analytics and interaction management. Track verified followers, automate interactions, and gain valuable insights.",
     "permissions": ["activeTab", "scripting", "storage", "tabs"],
     "host_permissions": ["https://x.com/*", "https://twitter.com/*", "https://cdn.jsdelivr.net/*"],
     "action": {
